--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 						<span>3</span>
 					</div>
 					<div class="switch">
-						<input id="switch-y" name="tripple" type="radio" value="Y" class="switch-input" checked />
+						<input id="switch-y" name="tripple" type="radio" value="Y" class="switch-input" onchange="changeTheme()" checked />
 						<label for="switch-y" class="switch-label switch-label-y">1</label>
-						<input id="switch-i" name="tripple" type="radio" value="I" class="switch-input"  />
+						<input id="switch-i" name="tripple" type="radio" value="I" class="switch-input" onchange="changeTheme()"  />
 						<label for="switch-i" class="switch-label switch-label-i">2</label>
-						<input id="switch-n" name="tripple" type="radio" value="N" class="switch-input" />
+						<input id="switch-n" name="tripple" type="radio" value="N" class="switch-input" onchange="changeTheme()" />
 						<label for="switch-n" class="switch-label switch-label-n">3</label>
 						<span class="switch-selector"></span>
 					</div>
@@ -42,27 +42,28 @@
             </header>
             <div class="main">
                 <div class="input-box">
-                    <h1>399,981</h1>
+                    <!-- <input /> -->
+                    <h1 id="value">399,981</h1>
                 </div>
-                <div class="button-box">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button class="del">DEL</button>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>+</button>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>-</button>
-                    <button>.</button>
-                    <button>0</button>
-                    <button>/</button>
-                    <button>x</button>
-                    <button class="reset span-2">RESET</button>
-                    <button class="equal span-2">=</button>
+                <div class="button-box" onclick="handleClick(event)">
+                    <button value="7">7</button>
+                    <button value="8">8</button>
+                    <button value="9">9</button>
+                    <button value="del" class="del">DEL</button>
+                    <button value="4">4</button>
+                    <button value="5">5</button>
+                    <button value="6">6</button>
+                    <button value="+">+</button>
+                    <button value="1">1</button>
+                    <button value="2">2</button>
+                    <button value="3">3</button>
+                    <button value="">-</button>
+                    <button value="">.</button>
+                    <button value="0">0</button>
+                    <button value="">/</button>
+                    <button value="x">x</button>
+                    <button value="" class="reset span-2">RESET</button>
+                    <button value="" class="equal span-2">=</button>
                 </div>
                 <!-- <button class="button-19" role="button">Button 19</button> -->
             </div>
@@ -75,5 +76,6 @@
                 >. Coded by <a href="#">Your Name Here</a>.
             </div>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
